# sms-system-reworked

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/workers/: sms_worker.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/layout/: top-bar.tsx
frontend/src/components/layout/nav/: app-sidebar.tsx  nav-main.tsx
frontend/src/components/theme/: color-mode-toggle.tsx
